added synchronised key generation